--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -1,5 +1,27 @@
-article { min-height: 300px; }
-nav img { width: 100%; max-width: 100%;}
+header {
+  position: relative;
+  height: 500px;
+  }
+  
+header img.backgroundfill {
+  position: absolute;
+  left: 50%;
+  width: 100%;
+  margin-left: -50%;
+  z-index: -1;
+}
+
+footer {
+  background-color: #dadada;
+  margin-top: 6em;
+  min-height: 10em;
+  padding-top: 4em;
+  padding-bottom: 6em;
+}
+
+main article {
+  padding: 2em 0;
+}
 
 .affix {
   position: fixed;
@@ -8,16 +30,11 @@ nav img { width: 100%; max-width: 100%;}
   max-width: 165px;
 }
 
+nav img {width: 100%;}
 img.fpo {width: 100%;}
 
-header {
-  position: relative;
-  height: 500px;
-  }
-header img.backgroundfill {
-  position: absolute;
-  left: 50%;
-  width: 100%;
-  margin-left: -50%;
-  z-index: -1;
+#intro p.lead {
+  font-weight: bold;
+  font-size: 2em;
+  line-height: 1.5;
 }
