update individual student template

--- a/templates/mini_templates/student.html
+++ b/templates/mini_templates/student.html
@@ -21,28 +21,14 @@
               <li>{{ Personal Email }}</li>
             </ul>
 
-          </div>
-          <nav class="mainnav">
-            <ul class="nav nav-stacked nav-pills">
-              <li><a href="#intro">Welcome</a></li>
-              <li><a href="#schedule">Schedule</a></li>
-              <li><a href="#galleries">Galleries</a></li>
-              <li><a href="#students">Students</a>
-                <ul> <!-- this submenu only shows up when in students area -->
-                  <li>All Projects</li> <!-- what's the default sort in this mode? alphabetical by lastname? -->
-                  <li>Group By:
-                    <ul>
-                      <li>Program</li> <!-- these are dynmaic sorts list.js? -->
-                      <li>Gallery</li>
-                      <li>Show Date (Show Num?)</li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li><a href="http://mica.edu/About_MICA.html">About MICA</a></li> <!-- where does this link to? -->
-              <li><img src="img/mica.png" /></li>
+            <ul>
+              <li>Prev</li>
+              <li>Random?</li>
+              <li>Next</li>
+              <li>Close</li>
             </ul>
-          </nav>
+
+          </div>
         </div>
 
         <div class="col-sm-9 col-sm-offset-1">
