--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -1,4 +1,101 @@
-header {
+body {
+  font-family: Calibre, "Trebuchet MS", sans-serif;
+  line-height: 1.2em;
+  font-weight: 500;
+  }
+  
+h1, h2, h3, h4, h5 {
+  font-weight: 700;
+  }
+
+@font-face {
+    font-family: 'Calibre';
+    src: url('../type/cal-light.eot');
+    src: url('../type/cal-light.eot?#iefix') format('embedded-opentype'),
+         url('../type/cal-light.woff') format('woff'),
+         url('../type/cal-light.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+    }
+    
+    
+@font-face {
+    font-family: 'Calibre';
+    src: url('../type/cal-regular.eot');
+    src: url('../type/cal-regular.eot?#iefix') format('embedded-opentype'),
+         url('../type/cal-regular.woff') format('woff'),
+         url('../type/cal-regular.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+    }
+
+
+@font-face {
+    font-family: 'Calibre';
+    src: url('../type/cal-medium.eot');
+    src: url('../type/cal-medium.eot?#iefix') format('embedded-opentype'),
+         url('../type/cal-medium.woff') format('woff'),
+         url('../type/cal-medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+    }
+
+
+@font-face {
+    font-family: 'Calibre';
+    src: url('../type/cal-semibold.eot');
+    src: url('../type/cal-semibold.eot?#iefix') format('embedded-opentype'),
+         url('../type/cal-semibold.woff') format('woff'),
+         url('../type/cal-semibold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+    }
+
+
+@font-face {
+    font-family: 'Calibre';
+    src: url('../type/cal-lightitalic.eot');
+    src: url('../type/cal-lightitalic.eot?#iefix') format('embedded-opentype'),
+         url('../type/cal-lightitalic.woff') format('woff'),
+         url('../type/cal-lightitalic.ttf') format('truetype');
+    font-weight: 100;
+    font-style: italic;
+    }
+
+
+@font-face {
+    font-family: 'Calibre';
+    src: url('../type/cal-regularitalic.eot');
+    src: url('../type/cal-regularitalic.eot?#iefix') format('embedded-opentype'),
+         url('../type/cal-regularitalic.woff') format('woff'),
+         url('../type/cal-regularitalic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+    }
+
+
+@font-face {
+    font-family: 'Calibre';
+    src: url('../type/cal-mediumitalic.eot');
+    src: url('../type/cal-mediumitalic.eot?#iefix') format('embedded-opentype'),
+         url('../type/cal-mediumitalic.woff') format('woff'),
+         url('../type/cal-mediumitalic.ttf') format('truetype');
+    font-weight: 500;
+    font-style: italic;
+    }
+
+
+@font-face {
+    font-family: 'Calibre';
+    src: url('../type/cal-semibolditalic.eot');
+    src: url('../type/cal-semibolditalic.eot?#iefix') format('embedded-opentype'),
+         url('../type/cal-semibolditalic.woff') format('woff'),
+         url('../type/cal-semibolditalic.ttf') format('truetype');
+    font-weight: 700;
+    font-style: italic;
+    }
+    
+    header {
   position: relative;
   height: 500px;
   }
