--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -1,3 +1,9 @@
+/** STILL TO DO After 21 Feb *******/
+/* Match header height to that of images so it scales nicely instead of being fixed. */
+/* Create some indication of Gallery filters so you know you've filtered it */
+
+
+
 /* Constants ****************************
 
 Red, aka Neon Coral, aka the new hottness: #f3421f;
@@ -111,7 +117,7 @@ h1, h2, h3, h4, h5 {
 
 header {
   position: relative;
-  height: 500px; /* WILL NEED TO MATCH HEIGHT OF IMAGES AS THEY SCALE, NOT BE FIXED. */
+  height: 500px; 
   color:#fff;
   }
   
@@ -128,9 +134,35 @@ header img.backgroundfill {
 
 /* Nav Styles ***************************/
 
+
+button.btn.btn-default.dropdown-toggle.sort-studentlist {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  background-color: #fff;
+  border-radius:0;
+  }
+  
+.btn-group.open .dropdown-toggle a {
+  box-shadow-inset: 0;
+  -moz-box-shadow-inset: 0;
+  -webkit-box-shadow-inset: 0;
+  box-shadow: inset 0;
+  -moz-box-shadow: inset 0;
+  -webkit-box-shadow: inset 0;
+  color: #f3421f; 
+  }
+  
+.dropdown-menu {
+  left: 60px;
+  top:-10px;
+  padding: 12px 0;
+  }
+  
+  
 nav img {width: 75%;}
 
-nav {
+nav, button.btn.btn-default.dropdown-toggle.sort-studentlist, .dropdown-menu > li > a {
   font-weight: 700;
   font-size: 16px;
   color:#666;
@@ -200,6 +232,7 @@ nav ul > li > ul > li > ul {  /** Second level subnav **/
   text-transform: uppercase;
   font-weight: 900;
   }
+
 
 
 
