--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -155,7 +155,7 @@ button.btn.btn-default.dropdown-toggle.sort-studentlist {
   }
   
 .dropdown-menu {
-  left: 60px;
+  left: 80px;
   top:-10px;
   padding: 12px 0;
   }
@@ -169,8 +169,8 @@ nav, button.btn.btn-default.dropdown-toggle.sort-studentlist, .dropdown-menu > l
   }
   
 nav li, ul {
-    list-style: none;
-    }
+  list-style: none;
+  }
 
 nav a, .dropdown-menu > li > a {
   color:#000;
@@ -201,7 +201,7 @@ nav a:active {
   text-decoration: none;
   }
   
-  ul.nav > li > a {
+ul.nav > li > a {
   color:#000;
   border-radius: 0;
   margin: 0;
@@ -224,7 +224,7 @@ nav ul > li > ul {  /** First level subnav **/
   line-height: 1.5em;
   }
   
-nav ul > li > ul > li > ul {  /** Second level subnav **/
+nav ul > li > ul > li > ul {  /** Second level subnav in simpler nav **/
   margin-left: 0;
   padding-left: 15px;
   margin-bottom: 10px;
@@ -235,7 +235,11 @@ nav ul > li > ul > li > ul {  /** Second level subnav **/
   font-weight: 300;
   }
 
-
+.input-group-btn .btn.btn-default {
+  padding: 6px 5px;
+  }
+  
+div.input-group {margin: 10px 0;}
 
 
 /* Main Content Styles ******************/
