--- a/css/kbadd.css
+++ b/css/kbadd.css
@@ -7,8 +7,7 @@ header > img.backgroundfill {
 
 header .ontop {
   background: transparent;
-  position: absolute;
-  bottom: 0;
+  position: relative;
   z-index: 999;
 }
 
