--- a/css/kbadd.css
+++ b/css/kbadd.css
@@ -21,7 +21,8 @@ header .ontop img {
 }
 
 header .ontop .sticky {
-  background: rgba(255,255,255,.5);
+  background: white;
+  background: rgba(255,255,255,.75);
   position: fixed;
   top: -540px;
   bottom: auto;
