--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -242,6 +242,41 @@ nav ul > li > ul > li > ul {  /** Second level subnav in simpler nav **/
 div.input-group {margin: 10px 0;}
 
 
+/* Gallery Section Styles ******************/
+
+#galleries img { width: 100%; }
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  }
+
+h4  {
+  color: #FF4C47;
+  font-size: 16px;
+  font-weight: 900;
+  margin: 0;
+  padding: 0;
+  }
+
+h5 {
+  color: #000;
+  font-size: 16px;
+  font-weight: 900;
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  color: #000;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 0;
+  padding: 0;
+}
+
+
 /* Main Content Styles ******************/
 
 main article {
