--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -248,7 +248,7 @@ div.input-group {margin: 10px 0;}
 
 #galleries img { width: 100%; }
 
-ul {
+#galleries ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -268,7 +268,7 @@ h5 {
   color: #000;
   font-size: 16px;
   font-weight: 900;
-  margin: 0;
+  margin: 0 0 2px 0;
   padding: 0;
 }
 
