--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -26,6 +26,56 @@ body {
 h1, h2, h3, h4, h5 {
   font-weight: 700;
   }
+
+
+h4  {
+  color: #FF4C47;
+  font-size: 16px;
+  font-weight: 900;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+  margin: 15px 0 3px 0;
+  }
+
+h5 {
+  color: #000;
+  font-size: 16px;
+  font-weight: 900;
+  margin: 0 0 2px 0;
+  padding: 0;
+}
+
+p {
+  color: #000;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 0;
+  padding: 0;
+}
+
+p a {
+  color:inherit;
+  border-bottom: 2px solid #999;
+  }
+  
+p a:hover {
+  color:inherit;
+  text-decoration: none;
+  border-bottom: 2px solid #FF4C47;
+  }
+  
+p a:active {
+  color:#FF4C47;
+  text-decoration: none;
+  border-bottom: 2px solid #FF4C47;
+  }
+  
+  
+article p {
+  margin-bottom: 15px;
+  }
+  
   
 /** @font-face import **/
 @font-face {
@@ -254,32 +304,6 @@ div.input-group {margin: 10px 0;}
   padding: 0;
   }
 
-h4  {
-  color: #FF4C47;
-  font-size: 16px;
-  font-weight: 900;
-  margin: 0;
-  padding: 0;
-  text-transform: uppercase;
-  margin: 15px 0 3px 0;
-  }
-
-h5 {
-  color: #000;
-  font-size: 16px;
-  font-weight: 900;
-  margin: 0 0 2px 0;
-  padding: 0;
-}
-
-p {
-  color: #000;
-  font-size: 16px;
-  font-weight: 300;
-  margin: 0;
-  padding: 0;
-}
-
 
 /* Main Content Styles ******************/
 
@@ -287,7 +311,11 @@ main article {
   padding: 2em 0;
 }
 
-h1 {color: #FF4C47}
+h1 {
+  font-size: 45px;
+  color: #FF4C47;
+  margin-bottom: 20px;
+  }
 
 .affix {
   position: fixed;
