--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -174,8 +174,10 @@ header img.backgroundfill {
   display: none;
   position: absolute;
   z-index: -1;
-  height: 100%;
+  height: 600px;
   width: auto;
+  top: 0;
+  left:0;
 }
 
 header .ontop {
