--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -396,4 +396,17 @@ footer {
 }
 
 
+.student-overlay {
+  z-index: 9000;
+  background: #fff;
+  width: 100%;
+  height: 100%;
+}
 
+.student-overlay {
+  position: fixed;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+}
