adding somethings to the overlay template

--- a/templates/mini/student.html
+++ b/templates/mini/student.html
@@ -1,5 +1,5 @@
 <!-- student.html -->
-<main class="container" style="padding-top: 40px;">
+<main class="container">
       <div class="row">
 
         <div class="col-sm-2">
