pointer icon over peers list

--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -397,7 +397,8 @@ footer {
 }
 
 /* Overlay related styles */
-#projects-demo li {
+#projects-demo li, 
+ul.program-peers li {
   cursor: pointer;
 }
 
