--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -409,6 +409,10 @@ footer {
   padding-bottom: 6em;
 }
 
+footer img, footer p, footer ul {
+  margin-bottom: 20px;
+}
+
 /* Overlay related styles */
 #projects-demo li, 
 ul.program-peers li {
