--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -332,7 +332,6 @@ main article {
   position: static;
 }
 
-/* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .affix {
     position: fixed;
@@ -403,14 +402,22 @@ ul.grid-display .thumb .block .info p {
 
 footer {
   background-color: #dadada;
-  margin-top: 6em;
+  margin-top: 4em;
   min-height: 10em;
   padding-top: 4em;
   padding-bottom: 6em;
+  text-align: center
 }
 
 footer img, footer p, footer ul {
   margin-bottom: 20px;
+}
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  footer {
+    text-align: left;
+  }
 }
 
 /* Overlay related styles */
