--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -247,6 +247,7 @@ nav a{
   border-radius: 0;
   margin: 0;
   padding: 0;
+  letter-spacing: 1px;
   }
   
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
