--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -162,41 +162,73 @@ article p {
   
 /* Image Header Styles ******************/
 
-header {
-  position: relative;
-  color:#fff;
-  width: 100%;
-  overflow: hidden;
+  header {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    height: 210px;
+    max-height: 210px;
+    }
+    
+  header img.backgroundfill {
+    display: none;
+    position: relative;
+    z-index: -1;
+    height: 210px;
+    max-height: 210px;
+    width: auto;
+    top: 0;
+    left:0;
   }
   
-header img.backgroundfill {
-  display: none;
-  position: relative;
-  z-index: -1;
-  height: 600px;
-  width: auto;
-  top: 0;
-  left:0;
-}
+  header .ontop {
+    background: transparent;
+    position: absolute;
+    bottom: 0;
+  }
+  
+  header .ontop img,
+  header .ontop .sticky {
+    position: relative;
+    bottom: 10px;
+  }
 
-header .ontop {
-  background: transparent;
-  position: absolute;
-  bottom: 0;
-}
-
-header .ontop img {
-  position: relative;
-  bottom: 20px;
-}
-
-header .ontop .sticky {
-  background: white;
-  background: rgba(255,255,255,.75);
-  position: fixed;
-  top: -398px;
-  bottom: auto;
-  z-index: 999;
+@media (min-width: 768px) {
+  header {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    }
+    
+  header img.backgroundfill {
+    display: none;
+    position: relative;
+    z-index: -1;
+    height: 600px;
+    width: auto;
+    top: 0;
+    left:0;
+  }
+  
+  header .ontop {
+    background: transparent;
+    position: absolute;
+    bottom: 0;
+  }
+  
+  header .ontop img {
+    position: relative;
+    bottom: 20px;
+  }
+  
+  header .ontop .sticky {
+    background: white;
+    background: rgba(255,255,255,.75);
+    position: fixed;
+    top: -398px;
+    bottom: auto;
+    z-index: 999;
+  }
 }
 
 /* Nav Styles ***************************/
@@ -334,6 +366,13 @@ main article {
   position: static;
 }
 
+#intro p.lead {
+  font-weight: bold;
+  font-size: 1.5em;
+  line-height: 1.1;
+  color:#000;
+}
+
 @media (min-width: 768px) {
   .affix {
     position: fixed;
@@ -341,13 +380,13 @@ main article {
     width: inherit;
     max-width: 165px;
   }
-}
 
-#intro p.lead {
-  font-weight: bold;
-  font-size: 2em;
-  line-height: 1.25;
-  color:#000;
+  #intro p.lead {
+    font-weight: bold;
+    font-size: 2em;
+    line-height: 1.25;
+    color:#000;
+  }
 }
 
 ul.grid-display {
@@ -461,7 +500,6 @@ ul.program-peers li {
 }
 
 .student-overlay .close {
-  color:;
   float: none;
   position: fixed;
   top:5px;
