--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -477,7 +477,9 @@ footer {
   min-height: 10em;
   padding-top: 4em;
   padding-bottom: 6em;
-  text-align: center
+  text-align: left;
+  color: rgb(51, 51, 51);
+  font-weight: 500;
 }
 
 footer img, footer p, footer ul {
@@ -489,7 +491,8 @@ footer img, footer p, footer ul {
   footer {
     text-align: left;
   }
-}
+]
+
 
 /* Overlay related styles */
 #projects-demo li, 
