remove #galleries p padding and margin

--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -361,6 +361,11 @@ div.input-group {margin: 10px 0;}
   margin: 0;
   padding: 0;
   }
+  
+#galleries p {
+  margin: 0;
+  padding: 0;
+  }
 
 /* Main Content Styles ******************/
 
